# smart-diary

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.nas.yml  docker-compose.yml  package-lock.json  package.json  portainer-template.json
.github/workflows/: docker-publish.yml
backend/: .gitignore  Dockerfile  Dockerfile.dev  cleanup_tasks.py  database.py  main.py  memory_service.py  migrate_decision_junction.py  migrate_energy.py  migrate_soft_delete.py  migrate_usage.py  migrate_writing_style.py  models.py  pyproject.toml
backend/.deepeval/: .deepeval_telemetry.txt
backend/evals/: test_energy.py
backend/routers/: analyze.py  auth.py  decisions.py  entries.py  insights.py  users.py  voice.py
backend/scratch/: test_decision_agent.py  test_life_domain.py
backend/skills/: decision_agent.py
backend/skills/10_10_10_rule/: SKILL.md
backend/skills/second_order_thinking/: SKILL.md
backend/skills/weighted_matrix/: SKILL.md
deployment/omv/: compose.yaml  notebook.env.example
frontend/: .gitignore  Dockerfile  Dockerfile.dev  next.config.ts  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  manifest.ts
frontend/src/app/(dashboard)/: layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: MoodProvider.tsx  ThemeProvider.tsx
frontend/src/components/diary/: DeleteConfirmationModal.tsx  EchoesWidget.tsx  FeedbackDashboard.tsx  JournalEditor.tsx  MorningIntentions.tsx  ReadOnlyEditor.tsx  (+1 more)
frontend/src/lib/: auth.ts  mood.ts  useNetworkStatus.ts
(+38 files in other folders)
